0.1.2
-----
  * all compression libraries are now optional

0.1.1
-----
  * add missing files
  * fix compiler warnings

0.1
---
  * first public release